fix(EditButton): alignment,fixed alignment of edit button in Dashboard issue #4105 (#4141)

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -3,7 +3,7 @@
   background-color: $primary-green;
   border-radius: 4px;
   color: $white;
-  margin: 5px;
+  margin: 0;
   transition: all .3s ease 0s;
 
   &:hover {
